# suggester

./: .gitignore  .how_it_work_ru.txt.swp  CMakeLists.txt  README.md  cache.c  how_it_work_ru.txt  main.cpp
cache/: CMakeLists.txt  self_cache.cpp  self_cache.h
server/: CMakeLists.txt  primeserv.cpp  primeserv.h  server.cpp  server.h
stringset/: data.py  data.txt  some.txt
test/: test.py
